--- a/book-service/requirements.txt
+++ b/book-service/requirements.txt
@@ -1,13 +1,6 @@
 asyncpg==0.20.1
-click==7.1.2
-databases==0.3.2
-fastapi==0.55.1
-h11==0.9.0
-httptools==0.1.1
-psycopg2-binary==2.8.5
-pydantic==1.5.1
-SQLAlchemy==1.3.17
-starlette==0.13.2
-uvicorn==0.11.5
-uvloop==0.14.0
-websockets==8.1
+databases[postgresql]==0.2.6
+fastapi==0.48.0
+SQLAlchemy==1.3.13
+uvicorn==0.11.2
+httpx==0.11.1
