--- a/nginx_config.conf
+++ b/nginx_config.conf
@@ -3,4 +3,8 @@ server{
     location /api/v1/books {
 	proxy_pass http://book_service:8000/api/v1/books;
     }
+    location /api/v1/authors {
+	proxy_pass http://author_service:8000/api/v1/authors;
+    }
 }
+
