--- a/book-service/requirements.txt
+++ b/book-service/requirements.txt
@@ -1,8 +1,8 @@
-asyncpg==0.20.1
+asyncpg
 databases[postgresql]==0.2.6
-fastapi==0.48.0
+fastapi
 SQLAlchemy==1.3.13
-uvicorn==0.11.2
+uvicorn
 httpx==0.11.1
 pytest==5.3.2
-requests==2.22.0
+requests
