--- a/book-service/requirements.txt
+++ b/book-service/requirements.txt
@@ -1,8 +1,17 @@
-asyncpg
-databases[postgresql]==0.2.6
+asyncpg==0.20.1
+httpx
+click==7.1.2
+databases==0.3.2
 fastapi
-SQLAlchemy==1.3.13
-uvicorn
-httpx==0.11.1
-pytest==5.3.2
+h11==0.9.0
+httptools==0.1.1
+psycopg2-binary==2.8.5
+pydantic==1.5.1
+SQLAlchemy==1.3.17
+starlette
+uvicorn==0.11.5
+uvloop==0.14.0
+websockets==8.1
+pytest
 requests
+aiocache==0.11.1
